// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App default 1`] = `
<div>
  Test
</div>
`;

exports[`Storyshots Banner default 1`] = `
<div
  className="banner"
>
  <img
    alt=""
    src="stripe_top.jpg"
  />
  <div
    className="main"
  >
    <img
      alt=""
      src="stripe_left.jpg"
    />
    <div
      className="content"
    >
      <div
        className="textContent"
      >
        <a
          className="title"
          href="/news/5"
          onClick={[Function]}
        >
          BACON IPSUM
        </a>
        <div
          className="text"
        >
          Chuck pig andouille, strip steak leberkas spare ribs.
        </div>
      </div>
      <img
        alt="BACON IPSUM"
        src="banner.jpg"
      />
      <div
        className="button"
        onClick={[Function]}
      >
        <div
          className="buttonText"
        >
          read more
        </div>
      </div>
    </div>
  </div>
  <img
    alt=""
    src="stripe_bottom.jpg"
  />
</div>
`;

exports[`Storyshots Banner long title 1`] = `
<div
  className="banner"
>
  <img
    alt=""
    src="stripe_top.jpg"
  />
  <div
    className="main"
  >
    <img
      alt=""
      src="stripe_left.jpg"
    />
    <div
      className="content"
    >
      <div
        className="textContent"
      >
        <a
          className="title"
          href="/news/6"
          onClick={[Function]}
        >
          BACON IPSUM DOLOR AMET TURKEY KIELBASA
        </a>
        <div
          className="text"
        >
          Strip steak pork chop tail.
        </div>
      </div>
      <img
        alt="BACON IPSUM DOLOR AMET TURKEY KIELBASA"
        src="banner.jpg"
      />
      <div
        className="button"
        onClick={[Function]}
      >
        <div
          className="buttonText"
        >
          read more
        </div>
      </div>
    </div>
  </div>
  <img
    alt=""
    src="stripe_bottom.jpg"
  />
</div>
`;

exports[`Storyshots Header default 1`] = `
<div
  className="header"
>
  <img
    alt=""
    className="logo"
    src="logo.jpg"
  />
  <img
    alt=""
    src="mainimg.jpg"
  />
</div>
`;

exports[`Storyshots Home default 1`] = `
<div
  className="home"
>
  <div
    className="top"
  >
    <div
      className="news"
    >
      <div
        className="topleft"
      >
        <div
          className="leftTitle"
        >
          2019
        </div>
        <div
          className="leftSubtitle"
        >
          Bacon ipsum dolor amet
        </div>
        <img
          alt=""
          src="greca.jpg"
        />
        <a
          className="title"
          href="/news/1"
          onClick={[Function]}
        >
          Spicy jalapeno bacon
        </a>
        <div
          className="topnewsNewstext"
        >
          Spare ribs strip steak salami venison tail cupim
        pork fatback ham hock pork loin bacon beef, biltong pig rump.
        </div>
        <div
          className="button"
          onClick={[Function]}
        >
          read more
        </div>
      </div>
      <div>
        <div
          className="horizontalbox"
        >
          <div
            className="content"
          >
            <img
              alt="Bacon ipsum dolor amet picanha filet mignon"
              src="img_1.jpg"
            />
            <div>
              <a
                className="title"
                href="/news/2"
                onClick={[Function]}
              >
                Bacon ipsum dolor amet picanha filet mignon
              </a>
              <div
                className="text"
              >
                Brisket kielbasa ground round burgdoggen. Jerky ham cow pig.
        Leberkas bacon frankfurter pancetta ham beef rump venison fatback jerky
        chuck pork chop.
              </div>
            </div>
          </div>
          <div
            className="footer"
          >
            <img
              alt=""
              src="points_h.jpg"
            />
            <div
              className="button"
              onClick={[Function]}
            >
              read more
            </div>
          </div>
        </div>
        <div
          className="horizontalbox"
        >
          <div
            className="content"
          >
            <img
              alt="Bacon ipsum dolor amet picanha filet mignon"
              src="img_2.jpg"
            />
            <div>
              <a
                className="title"
                href="/news/3"
                onClick={[Function]}
              >
                Bacon ipsum dolor amet picanha filet mignon
              </a>
              <div
                className="text"
              >
                Brisket kielbasa ground round burgdoggen. Jerky ham cow pig.
        Leberkas bacon frankfurter pancetta ham beef rump venison fatback jerky
        chuck pork chop.
              </div>
            </div>
          </div>
          <div
            className="footer"
          >
            <img
              alt=""
              src="points_h.jpg"
            />
            <div
              className="button"
              onClick={[Function]}
            >
              read more
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="banner"
  >
    <img
      alt=""
      src="stripe_top.jpg"
    />
    <div
      className="main"
    >
      <img
        alt=""
        src="stripe_left.jpg"
      />
      <div
        className="content"
      >
        <div
          className="textContent"
        >
          <a
            className="title"
            href="/news/4"
            onClick={[Function]}
          >
            BACON IPSUM
          </a>
          <div
            className="text"
          >
            Chuck pig andouille, strip steak leberkas spare ribs.
          </div>
        </div>
        <img
          alt="BACON IPSUM"
          src="banner.jpg"
        />
        <div
          className="button"
          onClick={[Function]}
        >
          <div
            className="buttonText"
          >
            read more
          </div>
        </div>
      </div>
    </div>
    <img
      alt=""
      src="stripe_bottom.jpg"
    />
  </div>
  <div
    className="bottom"
  >
    <div
      className="bottomleft"
    >
      <div
        className="verticalboxLarge"
      >
        <img
          alt="Ground round strip steak chicken, t-bone sirloin chuck"
          src="img_3.jpg"
        />
        <a
          className="title"
          href="/news/5"
          onClick={[Function]}
        >
          Ground round strip steak chicken, t-bone sirloin chuck
        </a>
        <div
          className="text"
        >
          Strip steak pork chop tail, meatloaf turducken short loin landjaeger bresaola
        pancetta bacon alcatra.
        </div>
      </div>
      <div
        className="verticalboxLarge"
      >
        <img
          alt="Ground round strip steak chicken, t-bone sirloin chuck"
          src="img_4.jpg"
        />
        <a
          className="title"
          href="/news/6"
          onClick={[Function]}
        >
          Ground round strip steak chicken, t-bone sirloin chuck
        </a>
        <div
          className="text"
        >
          Strip steak pork chop tail, meatloaf turducken short loin landjaeger bresaola
        pancetta bacon alcatra.
        </div>
      </div>
    </div>
    <div>
      <div
        className="horizontalbox"
      >
        <div
          className="content"
        >
          <div>
            <a
              className="title"
              href="/news/7"
              onClick={[Function]}
            >
              Bacon ipsum dolor amet porchetta ribeye chicken flank pork
            </a>
            <div
              className="text"
            >
              Jowl sirloin ground round, frankfurter fatback spare ribs tenderloin
        venison leberkas strip steak. Porchetta burgdoggen sirloin alcatra sausage
        short ribs kielbasa, ribeye flank corned beef fatback turkey swine picanha.
            </div>
          </div>
        </div>
        <div
          className="footer"
        >
          <img
            alt=""
            src="points_h.jpg"
          />
          <div
            className="button"
            onClick={[Function]}
          >
            read more
          </div>
        </div>
      </div>
      <div
        className="bottomright"
      >
        <div
          className="verticalbox"
        >
          <img
            alt="Spicy jalapeno bacon ipsum dolor amet pancetta"
            src="img_5.jpg"
          />
          <a
            className="title"
            href="/news/8"
            onClick={[Function]}
          >
            Spicy jalapeno bacon ipsum dolor amet pancetta
          </a>
          <div
            className="text"
          >
            Chicken prosciutto meatball salami tongue pork loin capicola pork
        chop kielbasa tenderloin spare ribs.
          </div>
          <div
            className="footer"
          >
            <div
              className="button"
              onClick={[Function]}
            >
              read more
            </div>
          </div>
        </div>
        <div
          className="verticalbox"
        >
          <img
            alt="Spicy jalapeno bacon ipsum dolor amet pancetta"
            src="img_6.jpg"
          />
          <a
            className="title"
            href="/news/9"
            onClick={[Function]}
          >
            Spicy jalapeno bacon ipsum dolor amet pancetta
          </a>
          <div
            className="text"
          >
            Chicken prosciutto meatball salami tongue pork loin capicola pork
        chop kielbasa tenderloin spare ribs.
          </div>
          <div
            className="footer"
          >
            <div
              className="button"
              onClick={[Function]}
            >
              read more
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <img
    alt=""
    src="points.jpg"
  />
</div>
`;

exports[`Storyshots HorizontalBox with image 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="horizontalbox"
    >
      <div
        className="content"
      >
        <img
          alt="Bacon ipsum dolor amet picanha filet mignon"
          src="img_1.jpg"
        />
        <div>
          <a
            className="title"
            href="/news/1"
            onClick={[Function]}
          >
            Bacon ipsum dolor amet picanha filet mignon
          </a>
          <div
            className="text"
          >
            Brisket kielbasa ground round burgdoggen. Jerky ham cow pig.
       Leberkas bacon frankfurter pancetta ham beef rump venison fatback jerky
       chuck pork chop.
          </div>
        </div>
      </div>
      <div
        className="footer"
      >
        <img
          alt=""
          src="points_h.jpg"
        />
        <div
          className="button"
          onClick={[Function]}
        >
          read more
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            HorizontalBox
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            with image
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  HorizontalBox
                </span>
                <span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      id
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          1
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      title
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Bacon ipsum dolor amet picanha filet mignon
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      text
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Brisket kielbasa ground round burgdoggen. Jerky ha…
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      image
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          img_1.jpg
                        </span>
                        "
                      </span>
                    </span>
                    <br />
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              HorizontalBox
              " Component
            </h3>
            <table
              className="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    id
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    image
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    title
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    text
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HorizontalBox without image 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="horizontalbox"
    >
      <div
        className="content"
      >
        <div>
          <a
            className="title"
            href="/news/2"
            onClick={[Function]}
          >
            Bacon ipsum dolor amet porchetta ribeye chicken flank pork
          </a>
          <div
            className="text"
          >
            Jowl sirloin ground round, frankfurter fatback spare ribs tenderloin
       venison leberkas strip steak. Porchetta burgdoggen sirloin alcatra sausage
       short ribs kielbasa, ribeye flank corned beef fatback turkey swine picanha.
          </div>
        </div>
      </div>
      <div
        className="footer"
      >
        <img
          alt=""
          src="points_h.jpg"
        />
        <div
          className="button"
          onClick={[Function]}
        >
          read more
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            HorizontalBox
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            without image
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  HorizontalBox
                </span>
                <span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      id
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          2
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      title
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Bacon ipsum dolor amet porchetta ribeye chicken fl…
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                     
                    <span
                      style={Object {}}
                    >
                      text
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Jowl sirloin ground round, frankfurter fatback spa…
                        </span>
                        "
                      </span>
                    </span>
                     
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              HorizontalBox
              " Component
            </h3>
            <table
              className="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    id
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    image
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    title
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    text
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots News default 1`] = `
<div
  className="news"
>
  <div
    className="title"
  >
    BACON IPSUM
  </div>
  <div>
    Chuck pig andouille, strip steak leberkas spare ribs.
  </div>
  <div
    className="button"
    onClick={[Function]}
  >
    back
  </div>
</div>
`;

exports[`Storyshots VerticalBox default 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="verticalbox"
    >
      <img
        alt="Spicy jalapeno bacon ipsum dolor amet pancetta"
        src="img_5.jpg"
      />
      <a
        className="title"
        href="/news/3"
        onClick={[Function]}
      >
        Spicy jalapeno bacon ipsum dolor amet pancetta
      </a>
      <div
        className="text"
      >
        Chicken prosciutto meatball salami tongue pork loin capicola pork
        chop kielbasa tenderloin spare ribs.
      </div>
      <div
        className="footer"
      >
        <div
          className="button"
          onClick={[Function]}
        >
          read more
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            VerticalBox
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            default
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  VerticalBox
                </span>
                <span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      id
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          3
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      title
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Spicy jalapeno bacon ipsum dolor amet pancetta
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      text
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Chicken prosciutto meatball salami tongue pork loi…
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      image
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          img_5.jpg
                        </span>
                        "
                      </span>
                    </span>
                    <br />
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              VerticalBox
              " Component
            </h3>
            <table
              className="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    id
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    image
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    title
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    text
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    type
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    <span>
                      default
                    </span>
                  </td>
                  <td
                    className={null}
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots VerticalBox large 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="verticalboxLarge"
    >
      <img
        alt="Ground round strip steak chicken, t-bone sirloin chuck"
        src="img_4.jpg"
      />
      <a
        className="title"
        href="/news/4"
        onClick={[Function]}
      >
        Ground round strip steak chicken, t-bone sirloin chuck
      </a>
      <div
        className="text"
      >
        Strip steak pork chop tail, meatloaf turducken short loin landjaeger bresaola
        pancetta bacon alcatra.
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
  <div
    className="info__overlay"
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "fixed",
        "right": 0,
        "top": 0,
        "zIndex": 99999,
      }
    }
  >
    <button
      className="info__close-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style={
          Object {
            "backgroundColor": "#fff",
            "border": "1px solid #eee",
            "borderRadius": "2px",
            "color": "black",
            "fontFamily": "Helvetica Neue, Helvetica, Segoe UI, Arial, freesans, sans-serif",
            "fontSize": "15px",
            "fontWeight": 300,
            "lineHeight": 1.45,
            "marginBottom": "20px",
            "marginTop": "20px",
            "padding": "20px 40px 40px",
          }
        }
      >
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
              "paddingTop": 10,
            }
          }
        >
          <h1
            style={
              Object {
                "fontSize": "35px",
                "margin": 0,
                "padding": 0,
              }
            }
          >
            VerticalBox
          </h1>
          <h2
            style={
              Object {
                "fontSize": "22px",
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }
          >
            large
          </h2>
        </div>
        
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Story Source
          </h1>
          <pre
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fafafa",
                "display": "flex",
                "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                "fontSize": ".88em",
                "justifyContent": "space-between",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }
          >
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  &lt;
                  VerticalBox
                </span>
                <span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      id
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          4
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      title
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Ground round strip steak chicken, t-bone sirloin c…
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      text
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          Strip steak pork chop tail, meatloaf turducken sho…
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      type
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          large
                        </span>
                        "
                      </span>
                    </span>
                  </span>
                  <span>
                    <span>
                      <br />
                        
                    </span>
                    <span
                      style={Object {}}
                    >
                      image
                    </span>
                    <span>
                      =
                      <span
                        style={Object {}}
                      >
                        "
                        <span
                          style={
                            Object {
                              "color": "#22a",
                              "wordBreak": "break-word",
                            }
                          }
                        >
                          img_4.jpg
                        </span>
                        "
                      </span>
                    </span>
                    <br />
                  </span>
                </span>
                <span
                  style={
                    Object {
                      "color": "#444",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
            </div>
            <button
              onClick={[Function]}
              style={
                Object {
                  "alignSelf": "flex-start",
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderColor": "rgb(238, 238, 238)",
                  "borderImage": "initial",
                  "borderRadius": "3px",
                  "borderStyle": "solid",
                  "borderWidth": "1px",
                  "cursor": "pointer",
                  "flexShrink": "0",
                  "fontSize": "13px",
                  "overflow": "hidden",
                  "padding": "3px 10px",
                }
              }
              type="button"
            >
              Copy
            </button>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": "25px",
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }
          >
            Prop Types
          </h1>
          <div>
            <h3
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }
            >
              "
              VerticalBox
              " Component
            </h3>
            <table
              className="info-table"
            >
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                  <th>
                    description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    id
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    image
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    title
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    text
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    -
                  </td>
                  <td
                    className={null}
                  />
                </tr>
                <tr>
                  <td
                    className="info-table-monospace"
                  >
                    type
                  </td>
                  <td
                    className="info-table-monospace"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    className={null}
                  >
                    yes
                  </td>
                  <td
                    className={null}
                  >
                    <span>
                      default
                    </span>
                  </td>
                  <td
                    className={null}
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
